New project CiviCRM^nz online! Fix some w3c validation errors.
validation: content-type, script, alt for div, etc

--- a/edge/index.html
+++ b/edge/index.html
@@ -3,8 +3,9 @@
 	Stellar by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	这个格式是整理过的哦！
 -->
-<html>
+<html lang="en">
 
 <head>
 	<title>The Edge: Animal Shelter Design | alejandro</title>
@@ -90,7 +91,7 @@
 				</div>
 				<span class="image alt"><img src="images/edge-environment.png" alt="Map of the environment" /></span>
 				<hr>
-				<h3>so we decide to design this building <br>as we do on a product or a service </h3>
+				<h3>so we decide to design this building <br>as we do on a product or service </h3>
 
 				<p><a href="#render">skip to see the showcase ></a></p>
 			</section>
@@ -128,7 +129,7 @@
 				</div>
 
 				<hr>
-				<h3>shape done <br>then since we can't talk to animals directly <br> we try to figure out what they need from where</h3>
+				<h3>inner shape done, <br>then since we can't talk to animals directly <br> we still need to figure out what they need from where</h3>
 				<span class="image alt"><img src="images/edge-flow.png" alt="" /></span>
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
@@ -179,7 +180,7 @@
 		<footer id="footer">
 			<p>
 				<a href="../index.html">
-					< back to home</a>
+					&lt; back to home</a>
 			</p>
 			<p class="right"> <a href="../mobile/">first project: QSC Mobile ></a> </p>
 
