--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <title>_alejandro</title>
   <meta charset="utf-8">
-  <meta http-equiv="Content-Type" content="text/html">
   <meta name="description" content="Alejandro Wang Portfolio">
   <meta name="author" content="Alejandro Wang">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -79,6 +78,25 @@
             </div>
 
             <div class="card">
+              <div class="card-header" id="civicrm-title">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#civicrm-info" aria-expanded="false" aria-controls="civicrm-info">CiviCRM<sup>nz</sup></h2>
+              </div>
+              <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#worklist" data-image="./images/civicrm-banner.png">
+                <div class="card-body">
+                  <h3>_intro</h3>
+                  <p>Consulting with Neutral Zone and reshaping experiences <br> of tracking members and programs in CiviCRM system</p>
+                  <h3>_duration</h3>
+                  <p>9/ 2017 - 12/ 2017 </p>
+                  <h3>_course</h3>
+                  <p>Contextual Inquiry and Consulting Foundations, University of Michigan</p>
+                  <h3>_scope</h3>
+                  <p>User Research, Consulting</p>
+                  <a class="word-colored-orange" href="./civicrm/">Read more</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
               <div class="card-header" id="smartpill-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#smartpill-info" aria-expanded="false" aria-controls="smartpill-info">SmartPill</h2>
               </div>
@@ -135,24 +153,7 @@
               </div>
             </div>
 
-            <div class="card">
-              <div class="card-header" id="civicrm-title">
-                <h2 class="mb-0" data-toggle="collapse" data-target="#civicrm-info" aria-expanded="false" aria-controls="civicrm-info">CiviCRM<sup>nz</sup></h2>
-              </div>
-              <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#worklist" data-image="./images/civicrm-banner.png">
-                <div class="card-body">
-                  <h3>_intro</h3>
-                  <p>Consulting with Neutral Zone and reshaping experiences of tracking members and programs in CiviCRM system</p>
-                  <h3>_duration</h3>
-                  <p>9/ 2017 - 12/ 2017 </p>
-                  <h3>_course</h3>
-                  <p>Contextual Inquiry and Consulting Foundations, University of Michigan</p>
-                  <h3>_scope</h3>
-                  <p>User Research, Consulting</p>
-                  <a class="upcoming" href="#">Upcoming soon...</a>
-                </div>
-              </div>
-            </div>
+
 
             <!-- <div class="card">
               <div class="card-header" id="inneref-title">
@@ -221,7 +222,7 @@
     <div id="loader"></div>
   </div>
 
-  <script type="text/javascript">
+  <script>
     $(document).ready(function() {
       setTimeout(function() {
         $(".background").fadeIn(000);
@@ -241,6 +242,7 @@
       "./images/smartpill-banner.png",
       "./images/inforest-banner.png",
       "./images/edge-banner.png",
+      "./images/civicrm-banner.png",
       "./images/about-banner.png"
     ]);
 
