--- a/mobile/index.html
+++ b/mobile/index.html
@@ -369,7 +369,7 @@
 				<a href="../index.html">
 					< back to home</a>
 			</p>
-			<p class="right"> <a href="../smartpill/">next project: Smartpill ></a> </p>
+			<p class="right"> <a href="../civicrm/">next project: CiviCRM<sup>nz</sup> ></a> </p>
 
 			<p class="copyright">&copy; Alejandro. Special thanks to <a href="https://html5up.net">HTML5 UP</a>.</p>
 		</footer>
