Fix a missing picture.
Just delete it...

--- a/civicrm/index.html
+++ b/civicrm/index.html
@@ -43,7 +43,7 @@
 			<p>Contextual inquiry for client's need to <br> reshape experiences of tracking teen members and programs <br> in CiviCRM NZ customized system</p>
 		</header>
 		<section id="header-img" class="civicrm main">
-			<span class="image main"><img src="images/civicrm_header.png" alt="" /></span>
+			<!-- <span class="image main"><img src="images/civicrm_header.png" alt="" /></span> -->
 		</section>
 
 		<!-- Nav -->
