Rewrite the preloader.js

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <title>_alejandro</title>
+  <title>_alejandro.wang</title>
   <meta charset="utf-8">
-  <meta name="description" content="Alejandro Wang Portfolio">
+  <meta name="description" content="Portfolio of Alejandro Wang">
   <meta name="author" content="Alejandro Wang">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="format-detection" content="telephone=no">
@@ -19,6 +19,20 @@
   <script src="./assets/js/plugins.js"></script>
   <script src="./assets/js/main.js"></script>
   <!-- <script src="./assets/js/works.js"></script> -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116480014-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-116480014-1');
+  </script>
+
+
 </head>
 
 <body>
@@ -155,7 +169,7 @@
 
 
 
-            <!-- <div class="card">
+            <div class="card">
               <div class="card-header" id="inneref-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#inneref-info" aria-expanded="false" aria-controls="inneref-info">Inneref / Empjoy</h2>
               </div>
@@ -169,10 +183,10 @@
                   <p>CHI, university of Michigan</p>
                   <h3>_scope</h3>
                   <p>User Research, Mobile App Interaction Design</p>
-                  <a class="word-colored-orange" href="./mobile/">Read more</a>
+                  <p class="upcoming">Upcoming Soon</a>
                 </div>
               </div>
-            </div> -->
+            </div>
 
 
             <div class="card">
@@ -218,8 +232,8 @@
       </div>
     </div>
   </div>
-  <div id="preloader">
-    <div id="loader"></div>
+  <div id="preloader-container">
+    <div id="preloader"></div>
   </div>
 
   <script>
