--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <p>Qiushichao Team, Zhejiang University</p>
                   <h3>_scope</h3>
                   <p>User Research, Mobile App Interaction Design</p>
-                  <a class="word-colored-orange" href="./mobile/">Read more</a>
+                  <a class="btn btn-primary" href="./mobile/" role="button"> Read More > </a>
                 </div>
               </div>
             </div>
@@ -105,7 +105,7 @@
                   <p>Contextual Inquiry and Consulting Foundations, University of Michigan</p>
                   <h3>_scope</h3>
                   <p>User Research, Consulting</p>
-                  <a class="word-colored-orange" href="./civicrm/">Read more</a>
+                  <a class="btn btn-primary" href="./civicrm/" role="button"> Read More > </a>
                 </div>
               </div>
             </div>
@@ -124,7 +124,7 @@
                   <p>Chinese Business Culture and Entrepreneurship, Zhejiang University</p>
                   <h3>_scope</h3>
                   <p>Market Research, Business Process Design, Strategy, UI Design</p>
-                  <a class="word-colored-orange" href="./smartpill/">Read more</a>
+                  <a class="btn btn-primary" href="./smartpill/" role="button"> Read More > </a>
                 </div>
               </div>
             </div>
@@ -143,7 +143,7 @@
                   <p>Student Research Training Program, Zhejiang University</p>
                   <h3>_scope</h3>
                   <p>Technology Research, Interaction Design, Architecture Design</p>
-                  <a class="word-colored-orange" href="./inforest/">Read more</a>
+                  <a class="btn btn-primary" href="./inforest/" role="button"> Read More > </a>
                 </div>
               </div>
             </div>
@@ -162,18 +162,17 @@
                   <p>Architecture Design, Zhejiang University</p>
                   <h3>_scope</h3>
                   <p>'Product' Research, Architecture Design</p>
-                  <a class="word-colored-orange" href="./edge/">Read more</a>
+                  <a class="btn btn-primary" href="./edge/" role="button"> Read More > </a>
                 </div>
               </div>
             </div>
-
 
 
             <div class="card">
               <div class="card-header" id="inneref-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#inneref-info" aria-expanded="false" aria-controls="inneref-info">Inneref / Empjoy</h2>
               </div>
-              <div id="inneref-info" class="collapse" aria-labelledby="inneref-title" data-parent="#worklist">
+              <div id="inneref-info" class="collapse" aria-labelledby="inneref-title" data-parent="#worklist" data-image="./images/blank-banner.png">
                 <div class="card-body">
                   <h3>_intro</h3>
                   <p>engagement app for new employees in CHI competition<br> designed for enterprise</p>
