Fix a preloader style issue.

--- a/civicrm/index.html
+++ b/civicrm/index.html
@@ -28,10 +28,9 @@
 
 <body>
 
-	<!-- Preloader -->
-	<div id="preloader">
-		<div id="loader" class="civicrm"></div>
-	</div>
+	  <div id="preloader-container">
+	    <div id="preloader"></div>
+	  </div>
 
 	<!-- Wrapper -->
 	<div id="wrapper">
