--- a/mobile/index.html
+++ b/mobile/index.html
@@ -29,10 +29,10 @@
 
 <body>
 
-	<!-- Preloader -->
-	<div id="preloader">
-		<div id="loader" class="mobile"></div>
-	</div>
+
+	  <div id="preloader-container">
+	    <div id="preloader"></div>
+	  </div>
 
 	<!-- Wrapper -->
 	<div id="wrapper">
