--- a/smartpill/index.html
+++ b/smartpill/index.html
@@ -28,10 +28,10 @@
 
 <body>
 
-	<!-- Preloader -->
-	<div id="preloader">
-		<div id="loader" class="smartpill"></div>
-	</div>
+
+	  <div id="preloader-container">
+	    <div id="preloader"></div>
+	  </div>
 
 	<!-- Wrapper -->
 	<div id="wrapper">
