Rewrite the homepage CSS.

--- a/inforest/index-old.html
+++ b/inforest/index-old.html
@@ -1,4 +1,9 @@
-<!doctype html>
+<!DOCTYPE HTML>
+<!--
+	Stellar by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 
 <head>
@@ -6,72 +11,50 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="../assets/js/ie/html5shiv.js"></script><![endif]-->
-
-	<link rel="stylesheet" href="../assets/css/normalize.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="../assets/css/preloader.css">
-	<link rel="stylesheet" href="../assets/css/font.css">
-	<link rel="stylesheet" href="../assets/css/works.css">
-
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh5U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="../assets/js/preloader.js"></script>
-
+	<link rel="stylesheet" href="../assets/css/works.css" />
+	<link rel="stylesheet" href="../assets/css/font.css" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="../assets/css/ie9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
+	<script src="../assets/js/jquery.min.js"></script>
 	<script src="../assets/js/jquery.scrollex.min.js"></script>
 	<script src="../assets/js/jquery.scrolly.min.js"></script>
 	<script src="../assets/js/skel.min.js"></script>
 	<script src="../assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="../assets/js/ie/respond.min.js"></script><![endif]-->
 	<script src="../assets/js/works.js"></script>
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116480014-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-116480014-1');
-  </script>
+	<link rel="stylesheet" href="../assets/css/preloader.css">
+	<script src="../assets/js/main.js"></script>
 </head>
 
-<body class="inforest">
+<body>
 
-	<!-- preloader -->
-  <div id="preloader-container">
-    <div id="preloader"></div>
-  </div>
 
-  <div class="container-fluid">
+	  <div id="preloader-container">
+	    <div id="preloader"></div>
+	  </div>
+
+	<!-- Wrapper -->
+	<div id="wrapper">
 
 		<!-- Header -->
-		<header >
-				<div class="slogan">
-					<h2>InForest : <br> Everyone in the haze <br>has a dream of forest</h2>
-					<p>A forest-like space with botanic interactive system arousing urban people the sensation of the forest. <br></p>
-				</div>
+		<header id="header" class="inforest alt">
+			<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
+			<h1>Everyone in the haze <br>has a dream of forest</h1>
+			<p>InForest - a forest-like space with botanic interactive system <br>arousing urban people the sensation of the forest. <br></p>
 		</header>
-
+		<section id="header-img" class="main">
+			<span class="image main"><img src="images/inforest_header.png" alt="" /></span>
+		</section>
 
 		<!-- Nav -->
-		<nav>
-			<div class="nav-desc">
-					<p class="float-left">designed by</p>
-					<p class="float-right">process</p>
-			</div>
-			<div class="nav-tab">
-				<a class="float-left" href="http://alej.wang">_ alejandro.wang</a>
-				<ul class="float-right">
-					<li><a href="#intro" class="active">intro</a></li>
-					<li><a href="#tech_research">tech research</a></li>
-					<li><a href="#conception">conception</a></li>
-					<li><a href="#prototype">prototype</a></li>
-					<li><a href="#result">result</a></li>
-				</ul>
-			</div>
+		<nav id="nav">
+			<ul>
+				<li><a href="#intro" class="active">intro</a></li>
+				<li><a href="#tech_research">tech research</a></li>
+				<li><a href="#conception">conception</a></li>
+				<li><a href="#prototype">prototype</a></li>
+				<li><a href="#result">result</a></li>
+			</ul>
 		</nav>
 
 		<!-- Main -->
@@ -98,8 +81,8 @@
 
 			<!-- Intro -->
 			<section id="intro" class="main">
-				<h3>_introducing</h3>
-				<h4>the forest is disappearing <br>and the urban citizens are lost</h4>
+				<h2>_introducing</h2>
+				<h3>the forest is disappearing <br>and the urban citizens are lost</h3>
 				<div class="row">
 					<span class="image alt"><img src="images/inforest_intro.png" alt="" /></span>
 					<div class="9u$ -3u 12u$(medium)">
@@ -111,13 +94,13 @@
 						<div class="row">
 							<div class="6u 12u$(medium)">
 								<span class="image fit"><img src="images/inforest_urban.png" alt="" /></span>
-								<h5>urbanization + nature = ?</h5>
+								<h4>urbanization + nature = ?</h4>
 								<p>China is experiencing the fastest and highest urbanization in the world, which leaves many thorny nature problems like air pollution, dense traffic, and more notably increasing pressure on people. Not surprisingly, urban people are eager to get
 									away from cities and get close to the wild nature without haze once they have a chance. </p>
 							</div>
 							<div class="6u$ 12u$(medium)">
 								<span class="image fit"><img src="images/inforest_screen.png" alt="" /></span>
-								<h5>interaction = screen ?</h5>
+								<h4>interaction = screen ?</h4>
 								<p>As informative transformation goes further and more profound, whereas ubiquitous screen-based user interfaces have profoundly changed people’s lives, it is estranging people from the real physical world. This context urges me to rethink interaction
 									design on a more significant scale-to design interactive system or environment where people are naturally immersed in. </p>
 							</div>
@@ -130,8 +113,8 @@
 
 			<!-- Tech-Research -->
 			<section id="tech_research" class="main">
-				<h3>_interactive technology research</h3>
-				<h4>we use technology from Disney + CMU <br>to inspire us to capture small signals <br>created by touching the plants</h4>
+				<h2>_interactive technology research</h2>
+				<h3>we use technology from Disney + CMU <br>to inspire us to capture small signals <br>created by touching the plants</h3>
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
 						<span class="image alt"><img src="images/inforest_principle.png" alt="" /></span>
@@ -144,7 +127,7 @@
 				</div>
 				<hr>
 
-				<h4>then by gestures classification experiment, <br>we selected suitable plants and <br>got valuable coefficient in results</h4>
+				<h3>then by gestures classification experiment, <br>we selected suitable plants and <br>got valuable coefficient in results</h3>
 
 				<div class="row">
 					<span class="image alt"><img src="images/inforest_exp.png" alt="" /></span>
@@ -160,8 +143,8 @@
 
 			<!-- Conception -->
 			<section id="conception" class="main">
-				<h3>_conception</h3>
-				<h4>by designing different interaction on different height,<br> Inforest tend to simulate the nature's feeling</h4>
+				<h2>_conception</h2>
+				<h3>by designing different interaction on different height,<br> Inforest tend to simulate the nature's feeling</h3>
 				<div class="row">
 
 					<div class="9u$ -3u 12u$(medium)">
@@ -169,20 +152,20 @@
 						<div class="row">
 							<div class="6u 12u$(medium)">
 
-								<h5>Bird + Wind</h5>
+								<h4>Bird + Wind</h4>
 								<p>People could control the volume of the sound of birds by changing the distance from their hands to the plants. When they touch the plants, they will hear all the birds scatter away suddenly, and they need to move to another location to listen
 									to those birds singing again.</p>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<h5>Cicadas</h5>
+								<h4>Cicadas</h4>
 								<p>On this floor, people could rest under a tree of cicadas sounds. The sound could be gradually stopped by pinching the leaves.</p>
 							</div>
 							<div class="6u 12u$(medium)">
-								<h5>Crickets + Frogs</h5>
+								<h4>Crickets + Frogs</h4>
 								<p>Interactive plants units are installed along the trails going upward. People would hear frogs and crickets sound when they walk on the trails and even hear frogs’ jumping into the water when they touch the plants.</p>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<h5>Streams</h5>
+								<h4>Streams</h4>
 								<p>The base of Inforest is an urban interactive public breathing space where people can participate. Our work taps into some of the most basic human instincts, to play and explore. It also generates talk value through a shared experience.</p>
 							</div>
 
@@ -196,12 +179,12 @@
 
 			<!-- Prototype -->
 			<section id="prototype" class="main">
-				<h3>_prototype</h3>
+				<h2>_prototype</h2>
 				<div class="iframe-container">
 						<iframe src="https://player.vimeo.com/video/202718376?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="iframe-video"></iframe>
 				</div>
 				<hr>
-				<h4>thanks for our engineer friend, <br>we designed and made incredible interaction units that <br>can mount lots of plants with the watering system</h4>
+				<h3>thanks for our engineer friend, <br>we designed and made incredible interaction units that <br>can mount lots of plants with the watering system</h3>
 
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
@@ -217,7 +200,7 @@
 					</div>
 				</div>
 				<hr>
-				<h4>also we had the small space Inforest <br>well-designed and built... as a model </h4>
+				<h3>also we had the small space Inforest <br>well-designed and built... as a model </h3>
 
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
@@ -239,9 +222,9 @@
 
 			<!-- Result -->
 			<section id="result" class="main">
-				<h3>_result</h3>
-				<h4>Although we didn't have the power to <br>build an architecture to provide an immersive experience, <br>
-					we believe our ideas will present our vision <br>and engage more people to work on the forest issue</h4>
+				<h2>_result</h2>
+				<h3>Although we didn't have the power to <br>build an architecture to provide an immersive experience, <br>
+					we believe our ideas will present our vision <br>and engage more people to work on the forest issue</h3>
 				<span class="image alt"><img src="images/inforest_hand.png" alt="" /></span>
 				<hr>
 
