--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html lang="en">
 
 <head>
-  <title>_alejandro.wang</title>
+  <title>_ alejandro.wang</title>
   <meta charset="utf-8">
   <meta name="description" content="Portfolio of Alejandro Wang">
   <meta name="author" content="Alejandro Wang">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" href="./assets/css/preloader.css">
+
   <link rel="stylesheet" href="./assets/css/normalize.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/preloader.css">
   <link rel="stylesheet" href="./assets/css/font.css">
-  <link rel="stylesheet" href="./assets/css/main.css">
-  <script src="./assets/js/jquery.min.js"></script>
+  <link rel="stylesheet" href="./assets/css/index.css">
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="./assets/js/plugins.js"></script>
-  <script src="./assets/js/main.js"></script>
-  <!-- <script src="./assets/js/works.js"></script> -->
+  <script src="./assets/js/preloader.js"></script>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116480014-1"></script>
   <script>
@@ -31,52 +32,54 @@
 
     gtag('config', 'UA-116480014-1');
   </script>
-
-
 </head>
 
 <body>
+
+  <!-- preloader -->
+  <div id="preloader-container">
+    <div id="preloader"></div>
+  </div>
+
+  <!-- background -->
+  <div class="background">
+  </div>
+
   <div class="container-fluid">
     <div class="row">
-      <!-- background -->
-      <div class="background">
-      </div>
-
-      <!-- self intro -->
       <div class="col-sm-12 col-md-6">
-        <div id="landing">
+
+        <!-- left top with header -->
+        <div id="left-top">
           <h1>
             _
             <span class="word-covered">alejandro.wang</span>
           </h1>
-
-          <!-- decoration only-->
-          <div id="decoration_down">
-            <h1><span>__</span></h1>
-          </div>
-
         </div>
-      </div>
+
+        <!-- left down with decoration -->
+        <div id="left-bottom">
+          <h1><span>__</span></h1>
+        </div>
+      </div> <!-- col-sm-12 col-md-6 -->
 
       <div class="col-sm-12 col-md-6">
-
-        <!-- self intro -->
         <div class="row">
-          <div class="col-sm-12 col-md-5" id="self-intro">
-            <!-- <h1 class="hor_right text-right"><span>|</span></h1> -->
-            <!-- decoration only-->
 
-            <p>Master student in HCI @ UMich <br> Love both design and coding <br> Looking for an internship this summer <br>
-              <a href="#footer-p" onclick="showAboutInfo()">...... about me</a> <br></p>
+          <!-- right top with self intro -->
+          <div id="right-top" class="col-sm-12 col-md-5">
+            <p>
+              Master student in HCI @ UMich <br> Love both design and coding <br> Looking for an internship this summer <br>
+              <a id="handleAbout" href="#footer">About me...</a> <br>
+            </p>
           </div>
 
-          <div id="worklist">
-
+          <div id="right-bottom" class="col-12">
             <div class="card">
               <div class="card-header" id="mobile-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#mobile-info" aria-expanded="false" aria-controls="mobile-info">Qiushichao Mobile</h2>
               </div>
-              <div id="mobile-info" class="collapse" aria-labelledby="mobile-title" data-parent="#worklist" data-image="./images/mobile-banner.png">
+              <div id="mobile-info" class="collapse" aria-labelledby="mobile-title" data-parent="#right-bottom" data-image="./images/mobile-banner.png">
                 <div class="card-body">
                   <h3>_intro</h3>
                   <p>Everyday calendar app designed for university students <br> to organize their academic calendar and find more club activities in leisure life <br> launched in 2016</p>
@@ -95,7 +98,7 @@
               <div class="card-header" id="civicrm-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#civicrm-info" aria-expanded="false" aria-controls="civicrm-info">CiviCRM<sup>nz</sup></h2>
               </div>
-              <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#worklist" data-image="./images/civicrm-banner.png">
+              <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#right-bottom" data-image="./images/civicrm-banner.png">
                 <div class="card-body">
                   <h3>_intro</h3>
                   <p>Consulting with Neutral Zone and reshaping experiences <br> of tracking members and programs in CiviCRM system</p>
@@ -114,7 +117,7 @@
               <div class="card-header" id="smartpill-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#smartpill-info" aria-expanded="false" aria-controls="smartpill-info">SmartPill</h2>
               </div>
-              <div id="smartpill-info" class="collapse" aria-labelledby="smartpill-title" data-parent="#worklist" data-image="./images/smartpill-banner.png">
+              <div id="smartpill-info" class="collapse" aria-labelledby="smartpill-title" data-parent="#right-bottom" data-image="./images/smartpill-banner.png">
                 <div class="card-body">
                   <h3>_intro</h3>
                   <p>Pocket pharmacist app strategy design with martketing plan <br>for busy patients and chronic disease patients</p>
@@ -133,7 +136,7 @@
               <div class="card-header" id="inforest-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#inforest-info" aria-expanded="false" aria-controls="inforest-info">InForest Space</h2>
               </div>
-              <div id="inforest-info" class="collapse" aria-labelledby="inforest-title" data-parent="#worklist" data-image="./images/inforest-banner.png">
+              <div id="inforest-info" class="collapse" aria-labelledby="inforest-title" data-parent="#right-bottom" data-image="./images/inforest-banner.png">
                 <div class="card-body">
                   <h3>_intro</h3>
                   <p>Interactive artifact and space design<br>to invoke dreams of forest in heavy city mist</p>
@@ -152,7 +155,7 @@
               <div class="card-header" id="animal-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#animal-info" aria-expanded="false" aria-controls="animal-info">The Edge : Animal Shelter Design</h2>
               </div>
-              <div id="animal-info" class="collapse" aria-labelledby="animal-title" data-parent="#worklist" data-image="./images/edge-banner.png">
+              <div id="animal-info" class="collapse" aria-labelledby="animal-title" data-parent="#right-bottom" data-image="./images/edge-banner.png">
                 <div class="card-body">
                   <h3>_intro</h3>
                   <p>Start with a view of animals <br>make an shelter for us animals <br>all the way from fund to adoption </p>
@@ -172,7 +175,7 @@
               <div class="card-header" id="inneref-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#inneref-info" aria-expanded="false" aria-controls="inneref-info">Inneref / Empjoy</h2>
               </div>
-              <div id="inneref-info" class="collapse" aria-labelledby="inneref-title" data-parent="#worklist" data-image="./images/blank-banner.png">
+              <div id="inneref-info" class="collapse" aria-labelledby="inneref-title" data-parent="#right-bottom" data-image="./images/blank-banner.png">
                 <div class="card-body">
                   <h3>_intro</h3>
                   <p>engagement app for new employees in CHI competition<br> designed for enterprise</p>
@@ -192,7 +195,7 @@
               <div class="card-header" id="about-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#about-info" aria-expanded="false" aria-controls="about-info">Alejandro Wang</h2>
               </div>
-              <div id="about-info" class="collapse" aria-labelledby="about-title" data-parent="#worklist" data-image="./images/about-banner.png">
+              <div id="about-info" class="collapse" aria-labelledby="about-title" data-parent="#right-bottom" data-image="./images/about-banner.png">
                 <div class="card-body">
                   <h3>_intro</h3>
                   <p>A synthesized project I've been working on for 24 years... all right you catch ME! <br> Hey, my name is Zhen Wang. My friends call me Alejandro. </p>
@@ -215,38 +218,30 @@
               </div>
             </div>
 
-
-          </div>
-
-
-          <div id="footer-p">
-            <p>© Alejandro</p>
+            <div id="footer">
+              <p>© Alejandro</p>
+            </div>
           </div>
 
         </div>
-        <!-- right -->
+      </div> <!-- col-sm-12 col-md-6 -->
 
-
-
-      </div>
     </div>
   </div>
-  <div id="preloader-container">
-    <div id="preloader"></div>
-  </div>
+
+
 
   <script>
+
     $(document).ready(function() {
       setTimeout(function() {
-        $(".background").fadeIn(000);
+        $(".background").fadeIn(1000);
       }, 1000)
     });
 
     function preload(arrayOfImages) {
       $(arrayOfImages).each(function() {
         $('<img/>')[0].src = this;
-        // Alternatively you could use:
-        // (new Image()).src = this;
       });
     }
 
@@ -259,25 +254,27 @@
       "./images/about-banner.png"
     ]);
 
-    function showAboutInfo() {
+    $('#handleAbout').click(function() {
       $('#about-info').collapse('show');
-    }
+    })
 
     $('.collapse').on('hide.bs.collapse', function() {
       var styles = {
         backgroundImage: 'url("./images/blank-banner.png")'
       }
       $(".background").css(styles);
-      $("#" + $(this).attr('aria-labelledby') + " > h2").removeClass('word-highlighted');
+      $("#" + $(this).attr('aria-labelledby') + " > h2").removeClass('word-underlined');
 
     })
+
     $('.collapse').on('shown.bs.collapse', function() {
       var styles = {
         backgroundImage: 'url(' + $(this).attr('data-image') + ')'
       }
       $(".background").css(styles);
-      $("#" + $(this).attr('aria-labelledby') + " > h2").addClass('word-highlighted');
+      $("#" + $(this).attr('aria-labelledby') + " > h2").addClass('word-underlined');
     })
+
   </script>
 </body>
 
