Add requirements for assignment...

--- a/works.html
+++ b/works.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>_ alejandro</title>
+  <title>works _ alejandro</title>
   <meta charset="utf-8">
   <meta name="description" content="Portfolio of Alejandro Wang">
   <meta name="author" content="Alejandro Wang">
@@ -51,24 +51,18 @@
 
   <nav>
     <ul>
-      <li><a href="./index.html" class="active">home</a></li>
-      <li><a href="./works.html">works</a></li>
+      <li><a href="./index.html">home</a></li>
+      <li><a href="./works.html" class="active">works</a></li>
       <li><a href="./about.html">about</a></li>
       <li><a href="./resume.html">resume</a></li>
     </ul>
   </nav>
 
-
-  <!--
-  <div id="right-top">
-    <p>
-      Master student in HCI @ UMich <br> Love both design and coding <br> Looking for an internship this summer <br>
-      <a id="handleAbout" href="#footer">About me...</a> <br>
-    </p>
-  </div>
-   -->
-
   <div id="right-container">
+    <div class="category">
+      <!-- <span>Test</span> -->
+    </div>
+
     <div class="card">
       <div class="card-header" id="mobile-title">
         <h2 class="mb-0" data-toggle="collapse" data-target="#mobile-info" aria-expanded="false" aria-controls="mobile-info">Qiushichao Mobile</h2>
